# doctor-octopus

./: .dockerignore  .gitignore  .prettierrc  Dockerfile  Dockerfile.client  Dockerfile.fixme  Dockerfile.server  compose.yaml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pyproject.toml  readme.md  setup.sh  start.sh  stop.sh
.github/: copilot-instructions.md  run-ci-test.yml  system-architecture.md
.github/workflows/: dr-ci.yml  e2e-ci.yml
client/: eslint.config.js  index.html  package-lock.json  package.json  readme.md  vite.config.js
client/public/: index.html
client/src/: App.css  App.js  App.jsx  config.json  index.css  index.js  main.jsx
client/src/component/card/: card.css  card.jsx  cards.css  cards.jsx  filter.css  filter.jsx
client/src/component/fixme/: fixme.css  fixme.jsx
client/src/component/fixme/data/: cancel-order-tags.json  new-order-ex.json  new-order-tags.json
client/src/component/footer/: footer.css  footer.jsx
client/src/component/header/: header.css  header.jsx
client/src/component/lab/: lab-context.js  lab-context.jsx  lab.css  lab.json  lab.jsx
client/src/component/navbar/: navbar.css  navbar.jsx
client/src/component/xterm/: terminal-context.js  xterm.css  xterm.jsx
client/src/component/xterm/commands/: handler.js  interactive.js
client/src/components/card/: card.css  card.jsx  cards.css  cards.jsx  filter.css  filter.jsx
client/src/components/lab/: lab.json  lab.jsx
client/src/components/navbar/: navbar.css  navbar.jsx
client/src/components/xterm/: xterm.css  xterm.jsx
client/src/components/xterm/commands/: handler.js  interactive.js
client/src/context/: index.js  lab-context.jsx  socketio-context.jsx  terminal-context.jsx
client/src/contexts/: lab-context.jsx  socketio-context.jsx  terminal-context.jsx
client/src/data/: new-order-tags.json
client/src/hooks/: index.js  lab-hooks.jsx  socketio-hooks.jsx  terminal-hooks.jsx
client/src/util/: env_loader.js  helper.js  redis-client.js  socketio-context.js
client/src/utils/: env_loader.js  icons.jsx  redis-client.js  sio_cards.js
e2e/: CSS_STYLING_GUIDE.md  build.js  conftest.py  e2e_pipeline.sh  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  readme.md
e2e/client/component/: cards.js  index.js  lab.js
e2e/client/components/: cards.js  lab.js
e2e/client/tests/: s3.spec.js  test-example.spec.js
e2e/client/tests/api/: s3.spec.js
e2e/client/tests/db/: db.spec.js
e2e/client/tests/ui/: cards.spec.js  do_app_ui.spec.js  header.spec.js  lab.spec.js
e2e/client/tests/unit/: s3.spec.js
e2e/client/utils/: S3.js  date-time.js  date_time_helper.js  env_loader.js  fs_helper.js  index.js  postgre_sql.js  reporter.js  runner.js
e2e/data/: s3_received_cards.json
e2e/perf/: cards-api.yml  cards-processor.js  cards-ui.yml  cards.yml  fixme-ws.yml  fixme.yml  runner.js
e2e/perf/reporter/: explanations.json  guide.md  haiku_perf_report.js  index.js  perf_reporter.js  report-body.js  report-main.js  report-sections.js  report-utils.js  reporter.js
e2e/perf/reporter/styles/: report-styles.css
e2e/server/tests/: api_test.py  notifications_test.py
e2e/server/tests/api/: cache_reload_test.py  cards_happy_test.py  cards_sad_test.py  notifications_test.py
e2e/server/tests/unit/: local_test.py  remote_test.py  validation_test.py
e2e/utils/: S3.js  date_time_helper.js  env_loader.js  fs_helper.js  index.js  postgre_sql.js  reporter.js  runner.js  spawn_child_process.js
fixme/: config.py  pyproject.toml  readme.md  server.py  start.sh
fixme/src/: fast_router.py  fastapi.py  wsocket.py
fixme/src/component/: fix.py
fixme/src/utils/: env_loader.py  executor.py  lifespan.py  logger.py  streamer.py
playwright/: S3.js  package-lock.json  package.json  playwright.config.js  playwright.config.ts  run.js
playwright/tests/: s3.spec.js  test-example.spec.js  test-example.spec.ts
playwright/utils/: S3.js  date-time.js  index.js  runner.js  spawn_child_process.js  transform-data.js
server/: .env.template  config.py  initialize.py  instances.py  pyproject.toml  readme.md  server-fixme.py  server-util.py  server.py  server_fixme.py  setup.py  start.sh
server/src/: config.py  fast_route.py  fast_router.py  fastapi.py  fix_client.py  socketio.py  wsocket.py
server/src/celery/: app.py  launcher.py  service.sh  start_all.sh  stop_all.sh  tasks.py  terminate.py
server/src/component/: cards.py  fix.py  local.py  notification.py  remote.py  validation.py
server/src/component/card/: cards.py  local.py  remote.py  validate.py  validation.py
server/src/components/: cards.py  notification.py  remote.py
server/src/routers/: __init__.py  cards.py  notifications.py  system.py
server/src/services/: cards.py  local.py  notification.py  remote.py  system.py
server/src/util/: aioredis.py  cancel.py  date.py  executor.py  fix.py  fix_client.py  helper.py  lifespan.py  logger.py  redis.py  s3.py  start.py  streamer.py
server/src/utils/: .env.template  aioredis.py  aioredis_client.py  cancel.py  date.py  date_time_helper.py  env_loader.py  file_helper.py  fix.py  helper.py  lifespan.py  queue.py  redis.py  redis_client.py  s3.py  s3_client.py
utils/: compose.yaml  dorc.sh  env-loader.sh  log.sh  prompt.sh  restart-notification.sh  restart-service.sh  server-setup.sh  setup-app.sh  setup-server.sh  setup.sh  start-dev.sh  start-local.sh  start.sh  status.sh  stop.sh
